Fix portrait in about-me being off-center

--- a/src/styles/layout/_about-me.scss
+++ b/src/styles/layout/_about-me.scss
@@ -8,6 +8,7 @@ $about-me-info-indent: 50px;
   margin-bottom: 0;
 
   .portrait {
+    margin: 0 auto;
     position: relative;
     max-width: 500px;
 
